src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-build/version-configuration-build.less
.ncl-version-configuration-build {
    .build-field {
        margin-bottom: 23px;

        .field-label {
            font-family: @font-family-sans-serif;
            font-size: 14px;
            font-weight: 500;
            text-align: left;
            color: @dusk-three;
        }

        .validating-input-field {
            .input-field {
                padding: 0 10px 0 17px;
            }

            .input-placeholder {
                left: 18px;
                font-style: italic;
                font-size: 14px;
            }
        }

        .build-command-field,.build-dependencies-field {
            .textarea-field {
                height: 70px;
                resize: none;
                white-space: pre;
                overflow-x: auto;
            }
        }
    }

    .build-checkboxes {
        display: flex;

        .checkbox-block {
            width: 20%;
        }
    }

    .files-field {
        margin-bottom: 1px;

        .uploading-files {
            margin-top: -6px;
            display: flex;

            .file-block {
                height: 32px;
                border-radius: 2px;
                background-color: @light-grayish-blue;
                border: solid 1px @pale-grey;

                .file-name {
                    height: 14px;
                    font-family: @font-family-sans-serif;
                    font-size: 14px;
                    line-height: 1.38;
                }

                .ncl-icon-script,
                .ncl-icon-file,
                .file-name {
                    display: inline-block;
                }

                .progress {
                    position: absolute;
                    background-color: @white;
                    display: inline-block;
                    width: 95px;
                    height: 6px;
                    border: 1px solid @pale-grey;
                    border-radius: 2px;
                    top: 13px;
                    right: 28px;

                    .progress-bar {
                        border-radius: 2px;
                        background-color: @dark-sky-blue;
                    }
                }

                .build-close-button {
                    position: absolute;
                    right: 13px;
                    width: 10px;
                    height: 10px;
                    border: none;
                    outline: none;
                    background: none;
                    margin-top: 3px;
                    font-size: 10px;
                }

                .ncl-icon-file {
                    font-size: 20px;
                }

                .ncl-icon-script,
                .ncl-icon-file,
                .ncl-icon-close {
                    color: @greyish-purple;
                }
            }

            .uploading-proccess-wrapper {
                width: 100%;
                flex-grow: 2.5;

                .uploading {
                    position: relative;
                    padding: 6px 130px 6px 8px;

                    .progress-percents {
                        margin-left: 15px;
                        color: @dark-grey;
                    }

                    .file-name {
                        margin-left: 8px;
                        color: @dark-sky-blue;
                        text-overflow: ellipsis;
                    }

                    .ncl-icon-script {
                        font-size: 12px;
                    }
                }

                .uploading-file {
                    padding: 3px 55px 3px 8px;

                    .file-name {
                        vertical-align: top;
                        margin: 4px;
                        margin-left: 9px;
                    }
                }
            }

            .one-file-uploaded {
                margin-right: 16px;
            }

            .uploaded-wrapper {
                width: 100%;
                display: flex;
                justify-content: space-between;

                .uploaded {
                    position: relative;
                    flex-grow: 1;
                    padding: 6px 40px 6px 8px;

                    .file-name {
                        margin-left: 9px;
                        color: @dusk-three;

                        .uploaded-file-directory {
                            margin-left: 8px;
                            color: @dark-greyish-blue;
                        }
                    }
                }

                .uploaded-file {
                    padding: 3px 55px 3px 8px;

                    .file-name {
                        margin: 4px 4px 4px 9px;
                        vertical-align: top;
                    }

                    .build-close-button {
                        top: 6px;
                    }
                }
            }
        }
    }

    .igz-action-menu {
        float: right;

        .menu-button {
            width: 40px;
            height: 40px;
            display: flex;
            justify-content: center;
            align-items: center;
            font-size: 22px;
            margin: -10px -15px 0 0;
            border-radius: 50%;
            color: @dusk-three;
        }

        .active {
            .black(0.1);
            background-color: @silver;
            box-shadow: inset 0px 2px 3px 0 @color;
        }

        .menu-dropdown {
            margin-top: 4px;
            right: -18px;
        }
    }
}

